# ya-code-review

./: .env.example  .gitignore  .npmignore  README.md  package.json  pyproject.toml
src/fb_review_agent/: __init__.py  cli.py  config.py  mcp_server.py
src/fb_review_agent/agent/: context.py  loop.py  tools.py
src/fb_review_agent/calibration/: __init__.py  calibrator.py
src/fb_review_agent/coverage/: __init__.py  analyzer.py
src/fb_review_agent/equivalence/: __init__.py  compare.py
src/fb_review_agent/fault/: __init__.py  localize.py
src/fb_review_agent/integrations/: everest.py  git.py  github.py
src/fb_review_agent/memory/: __init__.py  store.py
src/fb_review_agent/reasoning/: base.py  code_review.py  fault_localization.py  patch_equivalence.py
src/fb_review_agent/review/: diff_parser.py  finding.py  orchestrator.py  reporter.py
templates/: code_review.md  fault_localization.md  patch_equivalence.md  system_prompt.md
